@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-07T16:21:42Z",
-  "count_outdated" : 500,
-  "uniques_outdated" : 290,
-  "count" : 527,
+  "timestamp" : "2022-09-08T01:46:13Z",
+  "count_outdated" : 502,
+  "uniques_outdated" : 291,
+  "count" : 529,
   "uniques" : 306,
   "clones" : [
-    {
-      "timestamp": "2022-08-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-25T00:00:00Z",
       "count": 2,
@@ -91,8 +84,8 @@
     },
     {
       "timestamp": "2022-09-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
