@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2022-08-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-08-25T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -64,7 +59,7 @@
     },
     {
       "timestamp": "2022-09-07T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
